<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/quizFragment"
        android:icon="@drawable/ic_quiz"
        android:title="@string/nav_quiz" />
    <item
        android:id="@+id/arFragment"
        android:icon="@drawable/ic_ar"
        android:title="@string/nav_ar" />
    <item
        android:id="@+id/achievementFragment"
        android:icon="@drawable/ic_achievement"
        android:title="@string/nav_leaderboard" />
    <item
        android:id="@+id/profileFragment"
        android:icon="@drawable/ic_profile"
        android:title="@string/nav_profile" />
</menu>
