<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/homeFragment">

    <fragment
        android:id="@+id/homeFragment"
        android:name="com.unram.asakv2.ui.home.HomeFragment"
        android:label="@string/nav_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/quizFragment"
        android:name="com.unram.asakv2.ui.quiz.QuizContainerFragment"
        android:label="@string/nav_quiz"
        tools:layout="@layout/fragment_quiz_container" />

    <fragment
        android:id="@+id/arFragment"
        android:name="com.unram.asakv2.ui.ar.ArScanFragment"
        android:label="@string/nav_ar"
        tools:layout="@layout/fragment_ar_scan" />

    <fragment
        android:id="@+id/achievementFragment"
        android:name="com.unram.asakv2.ui.achievement.AchievementFragment"
        android:label="@string/nav_achievement"
        tools:layout="@layout/fragment_achievement" />

    <fragment
        android:id="@+id/profileFragment"
        android:name="com.unram.asakv2.ui.profile.ProfileFragment"
        android:label="@string/nav_profile"
        tools:layout="@layout/fragment_profile" />

</navigation>
